# RippleUI

./: DEPLOYMENT.md  DEPLOYMENT_STATUS.md  QUICK_DEPLOY.md  RAILWAY_CORS_SETUP.md  RAILWAY_SETUP.md  README.md  SDK_DESIGN.md  VERCEL_ENV_SETUP.md  docker-compose.yml
backend/: Dockerfile  MULTI_ACTION_INTENTS.md  PROMPT_CUSTOMIZATION.md  SERP_INTEGRATION.md  main.py  pyproject.toml  requirements.txt  schemas.py
backend/services/: ai_service.py  serp_service.py  utils.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FingerprintCursor.jsx  RippleMenu.jsx
frontend/src/config/: rippleMenuConfig.js
